--- a/package/Config.in
+++ b/package/Config.in
@@ -1,4 +1,5 @@
 
 menu "My external packages"
     source "$BR2_EXTERNAL_MY_EXT_PATH/package/foo_cmake/Config.in"
+    source "$BR2_EXTERNAL_MY_EXT_PATH/package/mediamtx/Config.in"
 endmenu
